packages/svelte/tests/compiler-errors/samples/runes-wrong-state-placement-2/main.svelte
<script>
	function a() {
		return $state({ a: 1 });
	}

	function b() {
		return $state(1);
	}
</script>
